Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -356,18 +356,24 @@
       <h2 id="conf-toggle">Conferences ▼</h2>
       <div class="accordion-content" id="conf-list">
         <ol class="doi-list">
-          <li>International Joint Workshop on Slow-to-Fast Earthquakes, Tokyo, Japan, 2023.</li>
-          <li>The ERC Tectonic Workshop, Roma 2nd Edition, Italy, 2023.</li>
-          <li>AGU Fall Meeting, San Francisco, USA, 2023.</li>
-          <li>JpGU, Chiba, Japan, 2024.</li>
-          <li>International Joint Workshop on Slow-to-Fast Earthquakes, Beppu, Japan, 2024.</li>
-          <li>International Workshop on Earthquakes 4th Edition, Cargèse, France, 2024.</li>
-          <li>SSJ Fall Meeting, Nigata, Japan, 2024.</li>
-          <li>AGU Fall Meeting, Washington D.C., USA, 2024.</li>
-          <li>JpGU, Chiba, Japan, 2025.</li>
-          <li>The ERC Tectonic Workshop 3rd Edition, Roma, Italy, 2025.</li>
-          <li>SSJ Fall Meeting, Fukuoka, Japan, 2025.</li>
-          <li>12th ACES International Workshop, Taipei, Taiwan, 2025.</li>
+          <!-- 2023 -->
+          <li style="list-style: none; color:#888; font-weight:bold; margin-top:10px;">--2023--</li>
+          <li>International Joint Workshop on Slow-to-Fast Earthquakes, Tokyo, Japan.</li>
+          <li>The ERC Tectonic Workshop, Roma 2nd Edition, Italy.</li>
+          <li>AGU Fall Meeting, San Francisco, USA.</li>
+          <!-- 2024 -->
+          <li style="list-style: none; color:#888; font-weight:bold; margin-top:10px;">--2024--</li>
+          <li>JpGU, Chiba, Japan.</li>
+          <li>International Joint Workshop on Slow-to-Fast Earthquakes, Beppu, Japan.</li>
+          <li>International Workshop on Earthquakes 4th Edition, Cargèse, France.</li>
+          <li>SSJ Fall Meeting, Nigata, Japan.</li>
+          <li>AGU Fall Meeting, Washington D.C., USA.</li>
+          <!-- 2025 -->
+          <li style="list-style: none; color:#888; font-weight:bold; margin-top:10px;">--2025--</li>
+          <li>JpGU, Chiba, Japan.</li>
+          <li>The ERC Tectonic Workshop 3rd Edition, Roma, Italy.</li>
+          <li>SSJ Fall Meeting, Fukuoka, Japan.</li>
+          <li>12th ACES International Workshop, Taipei, Taiwan.</li>
         </ol>
       </div>
     </div>
