--- a/index.html
+++ b/index.html
@@ -355,25 +355,22 @@
     <div class="section white-card">
       <h2 id="conf-toggle">Conferences ▼</h2>
       <div class="accordion-content" id="conf-list">
-        <ol class="doi-list">
-          <!-- 2023 -->
-          --2023--
+        <ol class="edu-list">
           <li>International Joint Workshop on Slow-to-Fast Earthquakes, Tokyo, Japan.</li>
           <li>The ERC Tectonic Workshop, Roma 2nd Edition, Italy.</li>
           <li>AGU Fall Meeting, San Francisco, USA.</li>
-          <!-- 2024 -->
-          --2024--
+          --2023--
           <li>JpGU, Chiba, Japan.</li>
           <li>International Joint Workshop on Slow-to-Fast Earthquakes, Beppu, Japan.</li>
           <li>International Workshop on Earthquakes 4th Edition, Cargèse, France.</li>
           <li>SSJ Fall Meeting, Nigata, Japan.</li>
           <li>AGU Fall Meeting, Washington D.C., USA.</li>
-          <!-- 2025 -->
-          --2025--
+          --2024--
           <li>JpGU, Chiba, Japan.</li>
           <li>The ERC Tectonic Workshop 3rd Edition, Roma, Italy.</li>
           <li>SSJ Fall Meeting, Fukuoka, Japan.</li>
           <li>12th ACES International Workshop, Taipei, Taiwan.</li>
+          --2025--
         </ol>
       </div>
     </div>
