--- a/index.html
+++ b/index.html
@@ -206,6 +206,8 @@
       counter-reset: pub-counter;
       padding-left: 0;
       list-style: none;
+      display: flex;
+      flex-direction: column-reverse;
     }
 
     .publication-list li {
