Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -200,14 +200,14 @@
     }
 
     /* ===============================
-      Publications専用リスト（改行入り対応）
+      Publications list.
     =============================== */
     .publication-list {
       counter-reset: pub-counter;
       padding-left: 0;
       list-style: none;
       display: flex;
-      flex-direction: column-reverse;
+      flex-direction: column;
     }
 
     .publication-list li {
@@ -225,6 +225,7 @@
       color: #0033aa;
       font-weight: bold;
     }
+
 
     /* Education list */
     .edu-list {
