Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -210,10 +210,11 @@
       list-style: disc;
     }
 
-    /* Conference list */
-    .year-label {
+    /* For conference list */
+    .edu-list li.no-marker {
+      list-style: none;
       font-weight: bold;
-      color: #370280;
+      color: #460083;
     }
 
     /* Footer */
@@ -337,18 +338,18 @@
       <h2 id="conf-toggle">Conferences ▼</h2>
       <div class="accordion-content" id="conf-list">
         <ol class="edu-list">
-          <li class="year-label">---- 2025 ----</li>
+          <li class="no-marker"><b>---- 2025 ----</b></li>
           <li>12th ACES International Workshop, Taipei, Taiwan.</li>
           <li>SSJ Fall Meeting, Fukuoka, Japan.</li>
           <li>The ERC Tectonic Workshop 3rd Edition, Roma, Italy.</li>
           <li>JpGU, Chiba, Japan.</li>
-          <li class="year-label">---- 2024 ----</li>
+          <li class="no-marker"><b>---- 2024 ----</b></li>
           <li>AGU Fall Meeting, Washington D.C., USA.</li>
           <li>SSJ Fall Meeting, Nigata, Japan.</li>
           <li>International Workshop on Earthquakes 4th Edition, Cargèse, France.</li>
           <li>International Joint Workshop on Slow-to-Fast Earthquakes, Beppu, Japan.</li>
           <li>JpGU, Chiba, Japan.</li>
-          <li class="year-label">---- 2023 ----</li>
+          <li class="no-marker"><b>---- 2023 ----</b></li>
           <li>AGU Fall Meeting, San Francisco, USA.</li>
           <li>The ERC Tectonic Workshop, Roma 2nd Edition, Italy.</li>
           <li>International Joint Workshop on Slow-to-Fast Earthquakes, Tokyo, Japan.</li>
