--- a/index.html
+++ b/index.html
@@ -173,14 +173,14 @@
     }
 
     .prof-link {
-      color: #0033aa;
+      color: #000000;
       text-decoration: none;
       font-weight: 500;
       transition: color 0.2s ease, text-decoration 0.2s ease;
     }
 
     .prof-link:hover {
-      color: #66c8ff;
+      color: #0033aa;
       text-decoration: underline;
     }
 
@@ -320,7 +320,7 @@
         <li>Numerical simulation and modeling of dynamic earthquake sequences.</li>
         <li>Machine learning for physics-based earthquake prediction.</li>
       </ul>
-      <p>In my master's program, I work with the projects about multi-scale fault constitutive law with <b><a href="https://www.rcep.dpri.kyoto-u.ac.jp/hnoda/" target="_blank" class="prof-link">Prof. Hiroyuki Noda</a></b>, and about synthetic (numerical or laboraotry) earthquake prediction using machine learning with <b>Prof. Yoshihiro Kaneko</b> and <b>Prof. Bertrand Rouet-Leduc</b>.</p>
+      <p>In my master's program, I work with the projects about multi-scale fault constitutive law with <b><a href="https://www.rcep.dpri.kyoto-u.ac.jp/hnoda/" target="_blank" class="prof-link">Prof. Hiro Noda</a></b>, and about synthetic (numerical or laboraotry) earthquake prediction using machine learning with <b><a href="https://sites.google.com/view/yoshihiro-kaneko" target="_blank" class="prof-link">Prof. Yoshi Kaneko</a></b> and <b><a href="https://sites.google.com/view/bertrandrl/home?authuser=0" target="_blank" class="prof-link">Prof. Bertrand Rouet-Leduc</a></b>.</p>
       <p>I am developing numerical simulation of dynamic earthquake sequence by spectral boundary intergral equation method, and various machine learning-based method for synthetic earthquake prediction.</p>
     </div>
 
