Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       position: absolute;
       left: 0;
       top: 0;
-      color: #0033aa;
+      color: #37009c;
       font-weight: bold;
     }
 
