Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -385,8 +385,9 @@
       <h2 id="awards-toggle">Awards ▼</h2>
       <div class="accordion-content" id="awards-list">
         <ul class="edu-list">
-          <li>JSPS Research Fellowship for Young Scientists, 2024</li>
-          <li>Best Poster Award, JpGU, 2022</li>
+          <li>JpGU 2025, Outstanding Student Presentation Award</li>
+          <li>SSJ Fall Meeting 2024, Outstanding Student Presentation Award</li>
+          <li>JpGU 2024, Outstanding Student Presentation Award</li>
         </ul>
       </div>
     </div>
