--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     .edu-list li.no-marker {
       list-style: none;
       font-weight: bold;
-      color: #460083;
+      color: #37009c;
     }
 
     /* Footer */
@@ -248,6 +248,35 @@
       text-decoration: underline;
     }
 
+    /* === Right sidebar floating box === */
+    .right-sidebar {
+      position: fixed;
+      top: 120px;     /* 適宜調整。プロフィールカードより少し下から始まる */
+      right: 40px;    /* 画面右に寄せる */
+      width: 260px;   /* 適度な幅 */
+      z-index: 1000;
+    }
+
+    .side-card {
+      background: #111217;
+      padding: 25px 28px;
+      border-radius: 16px;
+      color: #e6e6e6;
+      border: 1px solid rgba(255, 255, 255, 0.05);
+      box-shadow: 0 0 30px rgba(0, 0, 0, 0.45);
+      font-size: 0.95rem;
+    }
+
+    .news-list {
+      margin-top: 10px;
+      padding-left: 20px;
+    }
+
+    .news-list li {
+      margin-bottom: 10px;
+      line-height: 1.4;
+    }
+
     /* ===============================
       Responsive Styles
     =============================== */
@@ -267,6 +296,7 @@
       .publication-list li { padding-left: 24px; }
       .publication-list li::before { left: 0; }
       .footer { font-size: 0.85rem; padding: 15px 5px; }
+      .right-sidebar {display: none;}
     }
   </style>
 </head>
@@ -321,7 +351,7 @@
         <li>Machine learning for physics-based earthquake prediction.</li>
       </ul>
       <p>In my master's program, I work with the projects about multi-scale fault constitutive law with <b><a href="https://www.rcep.dpri.kyoto-u.ac.jp/hnoda/" target="_blank" class="prof-link">Prof. Hiro Noda</a></b>, and about synthetic (numerical or laboraotry) earthquake prediction using machine learning with <b><a href="https://sites.google.com/view/yoshihiro-kaneko" target="_blank" class="prof-link">Prof. Yoshi Kaneko</a></b> and <b><a href="https://sites.google.com/view/bertrandrl/home?authuser=0" target="_blank" class="prof-link">Prof. Bertrand Rouet-Leduc</a></b>.</p>
-      <p>I am developing numerical simulation of dynamic earthquake sequence by spectral boundary intergral equation method, and various machine learning-based method for synthetic earthquake prediction.</p>
+      <p>I am developing numerical simulation of dynamic earthquake sequence by spectral boundary intergral equation method and various machine learning-based method for synthetic earthquake prediction.</p>
     </div>
 
     <!-- Publications -->
@@ -374,8 +404,8 @@
       <h2 id="edu-toggle">Educations ▼</h2>
       <div class="accordion-content" id="edu-list">
         <ul class="edu-list">
-          <li>M.Sc. in Geophysics, Kyoto University<br><span style="color:#333;">2024-present</span></li>
-          <li>B.Sc. in Geophysics, Kyoto University<br><span style="color:#333;">2020-2024</span></li>
+          <li>M.Sc. in Geophysics, Kyoto University<br><span style="color:#000000">2024-present</span></li>
+          <li>B.Sc. in Geophysics, Kyoto University<br><span style="color:#000000">2020-2024</span></li>
         </ul>
       </div>
     </div>
