--- a/index.html
+++ b/index.html
@@ -432,6 +432,17 @@
       </p>
     </div>
 
+
+    <!-- Sidebar -->
+    <div class="sidebar">
+      <div class="card">
+        <h2>News</h2>
+        <div class="news-item">2024/10 — Started new project on fault constitutive scaling.</div>
+        <div class="news-item">2024/06 — Presented work at SSA Annual Meeting.</div>
+        <div class="news-item">2023/12 — Published study on multi-scale frictional behavior.</div>
+      </div>
+    </div>
+
   </div>
 
   <script>
