Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -434,12 +434,13 @@
 
 
     <!-- Sidebar -->
-    <div class="sidebar">
-      <div class="card">
-        <h2>News</h2>
-        <div class="news-item">2024/10 — Started new project on fault constitutive scaling.</div>
-        <div class="news-item">2024/06 — Presented work at SSA Annual Meeting.</div>
-        <div class="news-item">2023/12 — Published study on multi-scale frictional behavior.</div>
+    <div class="right-sidebar">
+      <div class="side-card">
+        <ul class="news-list">
+          <li>2024/10 — Started new project on fault constitutive scaling.</li>
+          <li>2024/06 — Presented work at SSA Annual Meeting.</li>
+          <li>2023/12 — Published study on multi-scale frictional behavior.</li>
+        </ul>
       </div>
     </div>
 
