Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
     <div class="card">
       <div class="photo"></div>
       <h1>Reiju Norisugi</h1>
-      <div class="subtext">Second year master's student</div>
+      <div class="subtext" style="color:#e6e6e6">Second year master's student</div>
       <div class="subtext">
         <a href="https://www.eps.sci.kyoto-u.ac.jp/index-e.html" target="_blank">
           Department of Geophysics, Kyoto University
