Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -323,6 +323,9 @@
         <a href="mailto:norisugi.reiju.77e@st.kyoto-u.ac.jp">
           <i class="fa-solid fa-at"></i> norisugi.reiju.77e@st.kyoto-u.ac.jp
         </a>
+        <a href="https://orcid.org/0009-0002-6610-9482" target="_blank">
+          <i class="fa-solid fa-file-lines"></i> CV (to be updated)
+        </a>
         <a href="https://scholar.google.com/citations?user=7JwUgzEAAAAJ&hl=ja" target="_blank">
           <i class="fa-brands fa-google"></i> Google Scholar
         </a>
