Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -267,6 +267,15 @@
       font-size: 0.95rem;
     }
 
+    .side-title {
+      font-size: 18px;
+      font-weight: 600;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #e5e5e5;
+      padding-bottom: 4px;
+      color: #333;
+    }
+
     .news-list {
       margin-top: 10px;
       padding-left: 20px;
@@ -439,6 +448,7 @@
     <!-- Sidebar -->
     <div class="right-sidebar">
       <div class="side-card">
+        <h3 class="side-title">News</h3>
         <ul class="news-list">
           <li>2024/10 — Started new project on fault constitutive scaling.</li>
           <li>2024/06 — Presented work at SSA Annual Meeting.</li>
