Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
     .side-card {
       background: #111217;
-      padding: 25px 28px;
+      padding: 10px 20px;
       border-radius: 16px;
       color: #e6e6e6;
       border: 1px solid rgba(255, 255, 255, 0.05);
@@ -271,9 +271,9 @@
       font-size: 18px;
       font-weight: 600;
       margin-bottom: 10px;
-      border-bottom: 2px solid #e5e5e5;
+      border-bottom: 2px solid #e6e6e6;
       padding-bottom: 4px;
-      color: #333;
+      color: #e6e6e6;
     }
 
     .news-list {
