--- a/index.html
+++ b/index.html
@@ -448,11 +448,11 @@
     <!-- Sidebar -->
     <div class="right-sidebar">
       <div class="side-card">
-        <h3 class="side-title">News</h3>
+        <h3 class="side-title">Recent News</h3>
         <ul class="news-list">
-          <li>2024/10 — Started new project on fault constitutive scaling.</li>
-          <li>2024/06 — Presented work at SSA Annual Meeting.</li>
-          <li>2023/12 — Published study on multi-scale frictional behavior.</li>
+          <li>2024/11 — Homepage open!</li>
+          <li>2025/10 — Paper published! ML prediction of lab EQs.</li>
+          <li>2024/04 — Paper published! ML prediction of synthetic EQs.</li>
         </ul>
       </div>
     </div>
