Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -286,6 +286,17 @@
       line-height: 1.4;
     }
 
+    .doi-link {
+      color: #37009c;
+      text-decoration: none;
+      margin-left: 6px;
+      font-weight: 500;
+    }
+
+    .doi-link:hover {
+      text-decoration: underline;
+    }
+
     /* ===============================
       Responsive Styles
     =============================== */
@@ -451,7 +462,7 @@
         <h3 class="side-title">Recent News</h3>
         <ul class="news-list">
           <li>2024/11 — Homepage open!</li>
-          <li>2025/10 — Paper published! ML prediction of lab EQs.</li>
+          <li>2025/10 — <a href="https://doi.org/10.1029/2025JB000000" class="doi-link" target="_blank"> Paper published!</a> ML prediction of lab EQs.</li>
           <li>2024/04 — Paper published! ML prediction of synthetic EQs.</li>
         </ul>
       </div>
