--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     }
 
     .doi-link {
-      color: #37009c;
+      color: #66c8ff;
       text-decoration: none;
       margin-left: 6px;
       font-weight: 500;
@@ -461,9 +461,12 @@
       <div class="side-card">
         <h3 class="side-title">Recent News</h3>
         <ul class="news-list">
-          <li>2024/11 — Homepage open!</li>
-          <li>2025/10 — <a href="https://doi.org/10.1029/2025JB000000" class="doi-link" target="_blank"> Paper published!</a> ML prediction of lab EQs.</li>
-          <li>2024/04 — Paper published! ML prediction of synthetic EQs.</li>
+          <li>2024/11 —<br>
+            Homepage open!</li>
+          <li>2025/10 —<br>
+            <a href="https://doi.org/10.1029/2025JB000000" class="doi-link" target="_blank"> Paper published!</a> ML prediction of lab EQs.</li>
+          <li>2024/04 —<br>
+            Paper published! ML prediction of synthetic EQs.</li>
         </ul>
       </div>
     </div>
