--- a/index.html
+++ b/index.html
@@ -464,9 +464,11 @@
           <li>2024/11 —<br>
             Homepage open!</li>
           <li>2025/10 —<br>
-            <a href="https://doi.org/10.1029/2025JB000000" class="doi-link" target="_blank"> Paper published!</a> ML prediction of lab EQs.</li>
+            <a href="https://doi.org/10.1038/s41467-025-64542-4" class="doi-link" target="_blank">Paper published!</a><br>
+            ML prediction of lab EQs.</li>
           <li>2024/04 —<br>
-            Paper published! ML prediction of synthetic EQs.</li>
+            <a href="https://doi.org/10.1029/2024GL108655" class="doi-link" target="_blank">Paper published!</a><br>
+            ML prediction of synthetic EQs.</li>
         </ul>
       </div>
     </div>
