--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
     /* === Right sidebar floating box === */
     .right-sidebar {
       position: fixed;
-      top: 120px;     /* 適宜調整。プロフィールカードより少し下から始まる */
-      right: 40px;    /* 画面右に寄せる */
-      width: 260px;   /* 適度な幅 */
+      top: 120px;
+      right: 40px;
+      width: 260px;
       z-index: 1000;
     }
 
@@ -274,6 +274,7 @@
       border-bottom: 2px solid #e6e6e6;
       padding-bottom: 4px;
       color: #e6e6e6;
+      text-align: center;
     }
 
     .news-list {
@@ -459,7 +460,7 @@
     <!-- Sidebar -->
     <div class="right-sidebar">
       <div class="side-card">
-        <h3 class="side-title">Recent News</h3>
+        <h3 class="side-title">✦ Recent News ✦</h3>
         <ul class="news-list">
           <li>2024/11 —<br>
             Homepage open!</li>
