--- a/index.html
+++ b/index.html
@@ -466,10 +466,10 @@
             Homepage open!</li>
           <li>2025/10 —<br>
             <a href="https://doi.org/10.1038/s41467-025-64542-4" class="doi-link" target="_blank">Paper published!</a><br>
-            ML prediction of lab EQs.</li>
+            ML short-term prediction of meter-scale lab EQs.</li>
           <li>2024/04 —<br>
             <a href="https://doi.org/10.1029/2024GL108655" class="doi-link" target="_blank">Paper published!</a><br>
-            ML prediction of synthetic EQs.</li>
+            ML prediction of synthetic EQs on frictionally heterogeneous fault.</li>
         </ul>
       </div>
     </div>
