Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -315,10 +315,11 @@
       body { padding: 20px 10px; }
       .container { width: 95%; }
       .card, .white-card { padding: 20px 20px; margin-bottom: 30px; }
+      .subtext { font-size: 0.95rem; }
       .photo { width: 100px; height: 100px; }
       h1 { font-size: 1.5rem; }
       h2 { font-size: 1.2rem; }
-      .white-card p, .white-card ul li, .edu-list li, .subtext { font-size: 0.85rem; line-height: 1.5; }
+      .white-card p, .white-card ul li, .edu-list li, .subtext { font-size: 0.95rem; line-height: 1.5; }
       .card .links a:first-child { margin-top: 6px; }
       .links a { font-size: 0.95rem; padding: 8px 12px; }
       .links { gap: 8px; }
