--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
       .publication-list li::before { left: 0; }
       .footer { font-size: 0.85rem; padding: 15px 5px; }
       .right-sidebar {display: none;}
-      .left_accent{display: none}
+      .left_accent {display: none;}
     }
   </style>
 </head>
