--- a/index.html
+++ b/index.html
@@ -53,6 +53,22 @@
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
     }
 
+    .avatar-icon {
+      width: 135px;
+      height: 135px;
+      border-radius: 50%;
+      background: linear-gradient(135deg, #0033aa, #66c8ff);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 3rem;
+      font-weight: 700;
+      color: #ffffff;
+      box-shadow: 0 0 15px rgba(0,0,0,0.4);
+      margin: 0 auto 20px auto;
+      border: 3px solid #333;
+    }
+
     h1 {
       font-size: 2rem;
       margin-bottom: 25px;
@@ -328,7 +344,8 @@
 
     <!-- Profile card -->
     <div class="card">
-      <div class="photo"></div>
+      
+      <div class="avatar-icon">RN</div>
       <h1>Reiju Norisugi</h1>
       <div class="subtext" style="color:#e6e6e6">Second year master's student</div>
       <div class="subtext">
