Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 
     .white-card p {
       font-size: 1.05rem;
+      font-weight: 500;
       line-height: 1.7;
       margin-bottom: 18px;
     }
