Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
 
     .white-card ul li {
       font-size: 1.03rem;
+      font-weight: 500;
       line-height: 1.65;
       margin-bottom: 10px;
     }
@@ -214,6 +215,7 @@
 
     .publication-list li {
       counter-increment: pub-counter;
+      font-weight: 500;
       margin-bottom: 20px;
       padding-left: 28px;
       position: relative;
@@ -237,6 +239,7 @@
     .edu-list li {
       margin-bottom: 10px;
       list-style: disc;
+      font-weight: 500;
     }
 
     /* For conference list */
