Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       position: absolute;
       left: 0;
       top: 0;
-      color: #37009c;
+      color: #000000;
       font-weight: bold;
     }
 
