Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
     <!-- Profile card -->
     <div class="card">
       
-      <div class="avatar-icon">RN</div>
+      <div class="photo"></div>
       <h1>Reiju Norisugi</h1>
       <div class="subtext" style="color:#e6e6e6">Second year master's student</div>
       <div class="subtext">
