Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <meta name="google-site-verification" content="WU1Z0ScvVr13Kj_3ruCo0CrpTF6l1_5PgRQGrMSAE1E" />
   <title>Reiju Norisugi</title>
   
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600&display=swap">
+  <link rel="icon" type="image/png" href="favicon.png">
 
   <style>
     /* ===============================
