--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       height: 135px;
       border-radius: 50%;
       margin: 0 auto 20px auto;
-      background-size: cover;
+      background-size: contain;
       background-position: center;
       background-image: url("me.jpg");
       border: 3px solid #333;
