--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       border-radius: 50%;
       margin: 0 auto 20px auto;
       background-size: contain;
+      background-repeat: no-repeat;
       background-position: center;
       background-image: url("me.jpg");
       border: 3px solid #333;
