Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 
     <!-- Research Interests -->
     <div class="section white-card">
-      <h2>Research Interests and bakgrounds</h2>
+      <h2>Research Interests and backgrounds</h2>
       <p>I am studying earthquake source physics and applications of machine learning techniques to geophysical problems. My current research interests are the followings.</p>
       <ul>
         <li>Multi-scale earthquake source property.</li>
