Add minimal HTML homepage

--- a/index.html
+++ b/index.html
@@ -487,6 +487,9 @@
       <div class="side-card">
         <h3 class="side-title">✦ Recent News ✦</h3>
         <ul class="news-list">
+          <li>2025/12/13 -<br>
+            <a href="https://doi.org/10.22541/essoar.176556310.01267653/v1" class="doi-link" target="_blank">Preprint published!</a><br>
+            Multi-scale rate-and-roughness dependent friction law.</li>
           <li>2025/11 —<br>
             Homepage open!</li>
           <li>2025/10 —<br>
