--- a/index.html
+++ b/index.html
@@ -464,6 +464,7 @@
       <h2 id="awards-toggle">Awards ▼</h2>
       <div class="accordion-content" id="awards-list">
         <ul class="edu-list">
+          <li>2025, Master's Thesis Award, Department of Geophysics</li>
           <li>JpGU 2025, Outstanding Student Presentation Award</li>
           <li>SSJ Fall Meeting 2024, Outstanding Student Presentation Award</li>
           <li>JpGU 2024, Outstanding Student Presentation Award</li>
@@ -534,7 +535,7 @@
   </script>
 
   <footer class="footer">
-    <p>© 2025 Reiju Norisugi &nbsp; Updated: 2025-12-14</p>
+    <p>© 2025 Reiju Norisugi &nbsp; Updated: 2026-02-24</p>
     <p>This website is licensed under
       <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC BY 4.0</a>.
     </p>
