--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
       <h2 id="awards-toggle">Awards ▼</h2>
       <div class="accordion-content" id="awards-list">
         <ul class="edu-list">
-          <li>2025, Master's Thesis Award, Department of Geophysics</li>
+          <li>2025, Master's Thesis Award, Department of Geophysics, Kyoto University</li>
           <li>JpGU 2025, Outstanding Student Presentation Award</li>
           <li>SSJ Fall Meeting 2024, Outstanding Student Presentation Award</li>
           <li>JpGU 2024, Outstanding Student Presentation Award</li>
